# liver-disease-detection

./: .gitignore  GreedyFindBin.py  README.md  config.py  eda_01.ipynb  featurization01.ipynb  pyproject.toml  trial.ipynb  trial02.ipynb
tests/: test_liver_disease_detection.py
