[tool.poetry]
name = "liver_disease_detection"
version = "0.1.0"
description = ""
authors = ["guccisan <yamskymtb0903@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
